agile-web/src/main/resources/org/headsupdev/agile/web/mobile.css
/*
 * HeadsUp Agile
 * Copyright 2009-2016 Heads Up Development Ltd.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

.hiddenonmobile {
    display: none !important;
}

#header1 {
    position: absolute;
    padding: 0;
    height: 64pt;
}

#header1 img {
    padding-left: 2pt;
    width: 24pt !important;
}

#userpanel {
    right: 0;    
}

#userpanel li {
    display: inline-block;
    width: 18pt;
    height: 18pt;
    overflow: hidden;
    padding: 6pt 1pt;
}

#header1 .headbutton:hover {
    background-image: none;
}

#header1 #userpanel .headbutton {
    padding: 0;
}

#userpanel .search {
    display: inherit;
}

#mainmenu {
    position: absolute;
    left: 0;
    top: 64pt;
    width: 100%;
    height: 24pt;

    padding: 0 !important;
    list-style: none;
}

#mainmenu li {
    display: inline-block;
    padding: 6pt 5pt !important;
    width: 18pt;
    overflow: hidden
}

#subselect {
    display: block;
    position: absolute;
    right: 10pt;
    top: 66pt;
    font-size: 14pt;
    font-weight: bold;
    color: #545A5A;
    cursor: pointer;
    z-index: 100;
}

#submenu {
    position: absolute;
    right: 0;
    top: 75.75pt;

    padding: 0 !important;
    padding: 0;
    list-style: none;

    background-color: #F0F1EA;
    background-image: none;
    border-top: none;
    border-left: 1px solid lightgray;
    border-right: 1px solid lightgray;
    border-bottom: 1px solid lightgray;
    overflow: hidden;

    z-index: 250;
}

#submenu.up {
    height: 0;
    overflow: hidden;

    border-bottom: 0 solid lightgray;
}

#submenu.down {
    height: auto;
    overflow: hidden;

    border-bottom: 1px solid lightgray;
}

#submenu li {
    display: block;
    padding: 4pt 5pt !important;
    margin:0;
}

.submenu-item:hover, .submenu-item a:hover {
    background-color: transparent;
}

#projectselect {
    position: absolute;
    left: 0;
    top: 32pt;
    display: block;

    width: 100%;
    padding: 5pt;
}

#projectmenu {
    left: 0;
    top: 62px;
}

#header1 .quicksearch {
    right: 87pt;
    left: 29pt;
}

#footer {
    padding: 5px 0;
    height: 25pt;
}

#footer .description {
    position: absolute;
    bottom: 22px;
    left: 2px;

    line-height: 150%;
}

#footer .content {
    padding: 0 2px;
    background-color: #cecfca;
}

#footer .footer2 {
    position: absolute;
    bottom: 38px;
    left: 2px;
    line-height: 150%;
}

#footer .copyright {
    position: absolute;
    bottom: 5px;
    left: 2px;
    width: 100%;
}

#footer .headsupdev {
    display: none;
}

#footer .note, #footer .update {
    position: absolute;
    bottom: 38px;
    right: 4px;
}

#mainmenu, #submenu {
    overflow: hidden;
    padding: 6px 0;
}

#mainmenu ul, #submenu ul {
    padding: 0;
}

#mainmenu li, #submenu li {
    padding: 6px 8px;
}

#taskpanel {
    display: none;
}

#submenu {
    margin: 0;
}

#content {
    padding: 2px 2px;
    margin-top: 96pt;
    margin-bottom: 65px;
}

.dialog {
    left: 0;
    top: 0;
    bottom: 0;
    right: 0;
    margin: 10px;
}

.dialog .dialogcontent {
    width: 95%;

    margin: auto;
    padding: 0;

    top: 6pt;
    overflow: hidden;
}

.dialog .dialogcontent form {
    width: 100%;
    margin: auto;
    text-align: center;
}

.dialog .dialogcontent form .rememberme {
    width: 100%;
    display: block;
    text-align: left;
}

.dialog .dialogcontent .textinput {
    width: 90%;
    -webkit-background-size: 100% 50px;
    -moz-background-size: 100% 50px;
    background-size: 100% 50px;
}

.dialog .switchformbuttonsok, .dialog .switchformbuttonscancel {
    width:40%;
}

.dialog .switchformbuttonsok {
    margin-right: 125%;
}

.dialog .switchformbuttonscancel {
    margin-left: -8%;
}

#filterbutton {
    right: 0px;
    margin-top: -4px;

    padding: 2px 5px;
    padding-right: 25px;

    background-color: #F0F1EA;
    border-left: 1px solid lightgray;
    border-bottom: 1px solid lightgray;
}

#filterbutton.filterbuttonhidden {
    background-position: 48px -34px;
    background-repeat: no-repeat;
}

#filterbutton.filterbuttonshown {
    background-position: 48px 23px;
    background-repeat: no-repeat;
}

/** little app hacks - make hooks for app specific mobile styles **/

form.search input.submit {
    right: 2px;
}

div.download a {
    float: none !important;
    margin-top: 5px !important;
}

.activity-group {
    float: none !important;
    width: auto !important;

    margin-right: 0 !important;
    border: none !important;
}

.activity-group .activity-name {
    padding: 5pt 0 !important;
}

.activity-group .activity-list {
    padding: 0 !important;
    height: auto !important;
    overflow: hidden !important;
}

.activity-group .history-summary {
    display: none !important;
}

